MER-160 PR fixes Part 1