@@ -2,23 +2,15 @@ package com.merkury.vulcanus.model.mappers;
 
 import com.merkury.vulcanus.model.dtos.spot.FavouriteSpotDto;
 import com.merkury.vulcanus.model.entities.Spot;
-
-import java.util.stream.Collectors;
+import jakarta.validation.constraints.NotNull;
 
 public class FavouriteSpotMapper {
 
-    public static FavouriteSpotDto toDto(Spot spot) {
-        if (spot == null) {
-            return null;
-        }
-
-        return FavouriteSpotDto.builder()
-                .id(spot.getId())
-                .name(spot.getName())
-                .photos(spot.getImages().stream()
-                        .map(ImgMapper::toDto)
-                        .collect(Collectors.toList()))
-                .build();
-
+    public static FavouriteSpotDto toDto(@NotNull Spot spot) {
+        return new FavouriteSpotDto(
+                spot.getId(),
+                spot.getName(),
+                spot.getImages().stream().map(ImgMapper::toDto).toList()
+        );
     }
 }
